# TC5044.10-Equipo-8

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  structure_proof.txt
.dvc/: config
data/processed/: energy_efficiency_modified.csv.dvc
data/raw/: .gitignore  example.csv.dvc
energy_efficiency/: config.py  dataset.py  features.py  main.py
energy_efficiency/modeling/: predict.py  train.py
mlruns/0/: meta.yaml
mlruns/125581159128928323/: meta.yaml
mlruns/125581159128928323/038a830cf13344f08570b988f08f9186/: meta.yaml
mlruns/125581159128928323/0eb1f6436b1f4e5d983b033012cdce3e/: meta.yaml
mlruns/125581159128928323/1239d378ae224b5dad1975630ebd72f5/: meta.yaml
mlruns/125581159128928323/34d023eca30046bd8fce8c84f3cf560b/: meta.yaml
mlruns/125581159128928323/46cfb110b31a45ee84919c7ee2f4ab33/: meta.yaml
mlruns/125581159128928323/4eadcf68d91f4b4098b659aa18eaebe7/: meta.yaml
mlruns/125581159128928323/7279f2dd9cc14e7c8bfbc29e5b923c39/: meta.yaml
mlruns/125581159128928323/91be3c4a015347478ed3e0c572458e4b/: meta.yaml
mlruns/125581159128928323/a876a78a16c745daa62f6ae4d75b7db8/: meta.yaml
mlruns/125581159128928323/b9295d4cad1b4fea93ac22cea9136c89/: meta.yaml
src/: README_DS_Ricardo.md  main.py
src/data/: .gitignore
src/handlers/: data_loader.py  data_preprocessor.py  model_evaluator.py  model_trainer.py  visual_eda.py
src/notebooks/: E8_F2_DS_Ricardo_Aguilar.ipynb  F2_DS_Ricardo_Aguilar.ipynb  README_DS_Ricardo.md  README_DS_Ricardo_Aguilar.md  RUN_EXPERIMENTS_DS  Run_Experiments_DS
(+147 files in other folders)
